--- a/javascript/polymorphism.html
+++ b/javascript/polymorphism.html
@@ -1,6 +1,6 @@
 <html>
 <head></head>
 <body>
-<script type="text/javascript" src="polymorphism.js"></script>
+<script type="text/javascript" src="oops.js"></script>
 </body>
 </html>
